	  by Alan Carvalho de Assis (2014-2-10)
	* configs/*/defconfig: Comment out all CONFIG_APPS_DIR settings.  These
	  should not be set in the default configurations because we don't know
	  where the apps/ directly will reside until configuration time (2014-2-21).
	* arch/arm/src/sam34/chip/sam4e_pinmap.h:  SAM4E pin multiplexing
	  definitions (2014-2-21).
	* sched/sched_processtimer.c and fs/procfs/fs_procfscpuload.c:  Add
	  logic to measure and calculate the CPU load percentage.  From David
	  Alessio (2014-2-22).
	* sched/sched_processtimer.c, sched_cpuload.c, fs/procfs/fs_procfscpuload.c,
	  and fs_procfscpuload.c:  CPU load logic extended to keep counts on each
	  thread.  The per-thread CPU is now reported in the procfs under
	  <pid>/loadavg (2014-2-23).
	* include/stddef.h:  ptrdiff_t is defined twice in stddef.h and also in
	  sys/types.h.  stdef.h is the correct location for the definition, but
	  it includes sys/types.h so, at least for now, the definition will be
	  retained in sys/types.h (2014-2-25).
	* net/net_close.c:  Fix one place where the connection reference count
	  was not being decremented.  This is really a cosmetic change BUT
	  when CONFIG_DEBUG_NET is enable, it will cause assertions (2014-2-25).
	* arch/arm/src/sama5/sam_adc.h:  Fix typos in the SAMA5 ADC register
	  definition header file (2014-2-26).
	* arch/arm/src/sam34:  The port to the SAM4E is code complete (2014-2-16).
	* include/cxx: Fix some bad idempotence defintions in header files
	  (2014-2-27).
	* sched/sched_cpuload.c:  Change calulation of the total count when the
	  time constant related delay elapsed.  The total count is now always
	  guaranteed to add up to 100% (excepting only truncation errors)
	  (2014-2-27).
	* fs/procfs/fs_procfscpuload.c and fs_procfsproc.c:  Remove the newline
	  at the end of the percentage so that the returned strings can be
	  printed on the same line as other values (2014-2-27).